documenting js file and fix for horizontal overflow in css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,6 +43,7 @@ body {
 .background_main {
   width: 100vw;
   min-height: 100vh;
+  max-width: 100%;
   position: absolute;
   top: 0;
   display: flex;
